# sentora

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_SETUP.md  README.md  SECURITY.md  TESTING.md  docker-compose.ha.yml  docker-compose.yml  start.sh
backend/: config.py  database.py  db_indexes.py  errors.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/audit/: log.py  router.py  ws.py
backend/audit/chain/: __init__.py  commands.py  dtos.py  entities.py  hasher.py  queries.py  repository.py  router.py
backend/domains/: __init__.py
backend/domains/admin/: dto.py  router.py
backend/domains/agents/: __init__.py  app_cache.py  apps_router.py  groups_router.py  router.py  sites_router.py
backend/domains/api_keys/: __init__.py  dto.py  entities.py  middleware.py  repository.py  router.py  service.py
backend/domains/auth/: __init__.py  dto.py  entities.py  first_user.py  oidc.py  router.py  saml.py  service.py  session_revocation.py  session_service.py  sso_provisioning.py  sso_settings.py
backend/domains/classification/: classifier.py  dto.py  entities.py  repository.py  router.py  service.py
backend/domains/compliance/: __init__.py  commands.py  dto.py  engine.py  entities.py  queries.py  repository.py  router.py
backend/domains/compliance/checks/: __init__.py  agent_online.py  agent_version.py  app_version.py  base.py  classification_coverage.py  custom_app_presence.py  delta_detection.py  eol_software.py  prohibited_app.py  registry.py  required_app.py  sync_freshness.py  unclassified_threshold.py
backend/domains/compliance/frameworks/: __init__.py  bsi.py  cis_v8.py  dora.py  hipaa.py  iso27001.py  nis2.py  nist_csf.py  pci_dss.py  registry.py  soc2.py
backend/domains/compliance/platform/: __init__.py  controls.py  dto.py  entities.py  router.py  service.py
backend/domains/config/: __init__.py  dto.py  entities.py  repository.py  router.py
backend/domains/dashboard/: cache.py  router.py
backend/domains/demo/: router.py  seed.py
backend/domains/enforcement/: __init__.py  dto.py  engine.py  entities.py  repository.py  router.py  service.py
backend/domains/eol/: __init__.py  dto.py  entities.py  matching.py  repository.py  router.py  service.py
backend/domains/export/: __init__.py  dto.py  router.py  service.py
backend/domains/fingerprint/: __init__.py  auto_proposer.py  dto.py  entities.py  matcher.py  repository.py  router.py  service.py
backend/domains/sources/: __init__.py  base.py  collections.py  identity.py  registry.py
backend/domains/sources/crowdstrike/: __init__.py  adapter.py  client.py  dto.py  entities.py  errors.py  normalizer.py  sync_agents.py  (+2 more)
backend/domains/sync/: app_filters.py  dto.py  manager.py  normalizer.py  phase_runner.py  router.py  s1_client.py
backend/domains/tags/: dto.py  entities.py  matcher.py  repository.py  router.py  service.py
backend/domains/taxonomy/: __init__.py  dto.py  entities.py  repository.py  router.py  seed.py  service.py
backend/domains/tenant/: __init__.py  dto.py  entities.py  repository.py  router.py
backend/domains/webhooks/: dto.py  entities.py  repository.py  router.py  service.py
backend/middleware/: __init__.py  auth.py  error_handler.py  metrics.py  rate_limit.py  request_logging.py  tenant.py  tracing.py
backend/seed_data/: taxonomy.yaml
backend/tests/: __init__.py  conftest.py
backend/tests/load/: locustfile.py  seed_data.py
backend/tests/test_integration/: __init__.py  test_accepted_advisories.py  test_admin_backup.py  test_agents.py  test_api_keys.py  test_api_smoke.py  test_audit_chain.py  test_auth.py  test_auth_enforcement.py  test_auth_sessions.py  test_auth_tokens.py  test_classification.py  test_classification_export.py  test_compliance.py  test_config.py  test_crowdstrike_sync.py  test_dashboard.py  test_demo.py  test_enforcement.py  test_eol.py  test_error_handlers.py  test_error_paths.py  test_fingerprint_import_export.py  test_fingerprint_proposals.py  test_fingerprints.py  test_iso27001_compliance.py  test_library.py  test_new_frameworks_compliance.py  test_performance_regression.py  test_platform_compliance.py  test_quality_regression.py  test_rate_limit_middleware.py  test_reliability_regression.py  test_s1_errors.py  test_security_audit_logging.py  test_security_authorization.py  test_security_injection.py  test_security_jwt.py  test_security_ssrf.py  test_sync.py  (+6 more)
backend/tests/test_unit/: test_cpe_parser.py  test_taxonomy_seed.py
backend/tests/unit/: test_api_keys.py  test_audit_chain_hasher.py  test_audit_chain_verifier_cli.py  test_audit_log.py  test_auth_security.py  test_backup.py  test_backup_s3.py  test_cis_v8_framework.py  test_compliance_audit.py  test_compliance_checks.py  test_config_settings.py  test_crowdstrike_errors.py  test_crowdstrike_normalizer.py  test_crypto.py  test_db_indexes.py  test_dora_framework.py  test_enforcement_engine.py  test_eol_check.py  test_eol_matching.py  test_eol_matching_extended.py  test_eol_service_parsing.py  test_export_utils.py  test_first_user.py  test_http_utils.py  test_iso27001_framework.py  test_matcher.py  test_nis2_framework.py  test_nist_csf_framework.py  test_normalizer.py  test_platform_controls.py  test_rate_limiter.py  test_regex_dos.py  test_s1_client.py  test_session_revocation.py  test_session_service.py  test_source_runner_security.py  test_sso_provisioning.py  test_sso_settings.py  test_ssrf.py  test_ssrf_extended.py  (+5 more)
backend/utils/: __init__.py  backup.py  backup_scheduler.py  crypto.py  csv_sanitize.py  distributed_lock.py  dt.py  http.py  leader_election.py  pubsub.py  rate_limit.py  scope.py  ssrf.py  user_revocation.py  ws_auth.py  ws_broadcast.py
(+246 files in other folders)
